--- a/table.css
+++ b/table.css
@@ -48,7 +48,7 @@ tr:nth-last-child(2) {
 	border-bottom: 2px solid grey;
 }
 
-.score_approve .is_approved {
+.is_approved {
 	width: max-content;
 	display: block;
 	text-align: center;
