:sparkles:feat: fn resultado aprovação

--- a/table.css
+++ b/table.css
@@ -53,7 +53,7 @@ tr:nth-last-child(2) {
 	display: block;
 	text-align: center;
 	margin: auto;
-	background-color: #028002;
+	background-color: #b1b9b1;
 	padding: 0.3rem;
 	color: #fff;
 	font-weight: bold;
